# labor-code

./: .gitignore  README  main.py  pyproject.toml  secrets.toml.sample  sumary.py  test_edit.py
chatbot/: client.py  config.py  main.py  prompting.py
chatbot/utils/: client.py  history.py  prompting.py
chatbot/utils/models/: intents.py
db/: README.md  milvus_client.py  query_examples.py  setup_database.py  test_embeddings.py
jsons/anteproyecto/: background.json  diagnosis.json  intro.json  policies.json
jsons/anteproyecto/law/: articles.json  books.json  chapters.json  paragraphs.json  preamble.json  provisions.json  provisions_blocks.json  sections.json  titles.json
jsons/anteproyecto/updated_law/: chapters.json  sections.json
jsons/ley-actual/law/: articles.json  chapters.json  paragraphs.json  preamble.json  provisions.json  provisions_blocks.json  sections.json
pages/: chat.py  ideas.py  project.py  search.py
preprocessing/: .env  comparator.py  f_comparator.py  llm.py  main.py  utils.py
preprocessing/mappings/: articulo_vs_articulo.json  articulo_vs_articulo_paragraphs.json  diagnostico_vs_articulo.json  disposicion_vs_disposicion.json  parrafo_vs_parrafo.json  politicas_vs_articulo.json  preambulo_vs_preambulo.json
questions-and-answers/: articles_questions.json  books_questions.json  chapters_questions.json  sections_questions.json  titles_questions.json
sumary/: sumary.py
