[project]
name = "labor-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ldap3>=2.9.1",
    "milvus[client]>=2.2.4",
    "numpy>=2.3.3",
    "openai>=1.107.1",
    "pydantic>=2.11.7",
    "pymilvus>=2.6.1",
    "streamlit>=1.49.1",
]
